Corrected spacing on headings

--- a/main.css
+++ b/main.css
@@ -102,6 +102,7 @@ h1 {
   padding-bottom: 15px;
   display:flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .footer {
